[tool.poetry]
name = "project-euler"
version = "0.1.0"
description = ""
authors = ["David Edwards <david.edwards@freeagent.com>"]

[tool.poetry.dependencies]
python = "^3.10"
black = "^22.3.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
mypy = "^0.950"
hypothesis = "^6.46.2"
pytest-benchmark = "^3.4.1"
ipykernel = "^6.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
